--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/nodemon": "^1.19.2",
+    "@types/uuid4": "^2.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "uuid4": "^2.0.3"
   }
 }
