--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^3.12.8",
     "typescript": "^5.0.4"
   },
   "dependencies": {
