--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --max-workers=1",
-    "test:manual": "jest --watch --max-workers=1",
+    "test": "vitest dev run --coverage",
     "dev": "nodemon src/server.ts --watch"
   },
   "keywords": [],
@@ -13,20 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "@jest/globals": "^29.5.0",
-    "@types/faker": "^6.6.9",
-    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/nodemon": "^1.19.2",
     "@types/uuid4": "^2.0.0",
-    "jest": "^29.5.0",
+    "@vitest/coverage-v8": "^0.34.4",
     "nodemon": "^2.0.22",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
     "tsx": "^3.12.8",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.4"
   },
   "dependencies": {
     "uuid4": "^2.0.3"
