--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "lint-staged": {
     "*.ts": [
       "eslint --fix",
-      "prettier --write",
-      "npm run test:stagged"
+      "prettier --write"
     ]
   },
   "keywords": [],
